--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 ---
 layout: home
-# articles:
-#   excerpt_type: html
+titles:
+  en      : &EN       About
+  en-GB   : *EN
+  en-US   : *EN
+  en-CA   : *EN
+  en-AU   : *EN
+  zh      : *ZH_HANS
+  zh-CN   : *ZH_HANS
+  zh-SG   : *ZH_HANS
+  zh-Hant : &ZH_HANT  職場生活漂流記
+  zh-TW   : *ZH_HANT
+  zh-HK   : *ZH_HANT
+  ko      : &KO       직장생활표류기
+  ko-KR   : *KO
+key: page-about
 ---
