Index: disqus 댓글 삭제
아티클 헤더사이즈 원복함: 한번에 수정하려고

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ titles:
   zh-HK   : *ZH_HANT
   ko      : &KO       직장생활표류기
   ko-KR   : *KO
-key: anything
+key: page-about
 # articles:
 #   excerpt_type: html
 ---
