Revert "Index: disqus 댓글 삭제"
This reverts commit e4f3d3c2ceead60fbf8594fec376a2b880f14ebb.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ titles:
   zh-HK   : *ZH_HANT
   ko      : &KO       직장생활표류기
   ko-KR   : *KO
-key: page-about
+key: anything
 # articles:
 #   excerpt_type: html
 ---
