Index: disqus 댓글 삭제

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 titles:
-  en      : &EN       About
+  en      : &EN       Home
   en-GB   : *EN
   en-US   : *EN
   en-CA   : *EN
@@ -14,7 +14,6 @@ titles:
   zh-HK   : *ZH_HANT
   ko      : &KO       직장생활표류기
   ko-KR   : *KO
-key: anything
 # articles:
 #   excerpt_type: html
 ---
