--- a/work.html
+++ b/work.html
@@ -1,10 +1,10 @@
 ---
-layout: archive
+layout: page
 title: Work
 permalink: /work/
 ---
 
-이 섹션에는 일, 업무 방식, 생산성, 커리어와 관련된 글을 모았습니다.
+<p>이 섹션에는 일, 업무 방식, 생산성, 커리어와 관련된 글을 모았습니다.</p>
 
 {%- assign _articles = site.categories.work -%}
 {%- include article-list.html
